# structlog-demo

./: CMakeLists.txt  main.cpp  readme.md
structlog/: fastbuffer.h  number.cpp  number.h  string.cpp  string.h  structlog.cpp  structlog.h
